--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <link rel="stylesheet" type="text/css" href="index.css" media="screen" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="index.js"></script>
-  <title>List manipulations</title>
+  <title>List Utils</title>
 </head>
 <style></style>
 <script></script>
