--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="index.js"></script>
   <title>List Utils</title>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="list-utils/favicon.ico">
 </head>
 <style></style>
 <script></script>
