--- a/index.html
+++ b/index.html
@@ -4,29 +4,32 @@
   <script src="index.js"></script>
   <title>List Utils</title>
   <link rel="icon" type="image/x-icon" href="list-utils/favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <style></style>
 <script></script>
 <div class="flex-column">
   <div class="flex-row no-gap">
     <container-label>A</container-label>
-    <textarea class="full-width" id="t1"></textarea> <span class="numLines">0 lines</span>
+    <textarea class="full-width" id="t1"></textarea> <span class="num-lines">0 lines</span>
   </div>
   <div class="flex-row no-gap">
     <container-label>B</container-label>
-    <textarea class="full-width" id="t2"></textarea> <span class="numLines">0 lines</span>
+    <textarea class="full-width" id="t2"></textarea> <span class="num-lines">0 lines</span>
   </div>
   <div class="flex-row no-gap" id="options">
     <container-label>Options</container-label>
     <fieldset>
-      <legend>Array data wrap</legend>
+      <legend>Wrap Items Symbol</legend>
       <div>
         <input type="radio" id="singleQuote" name="arrayDataWrap" value="singleQuote" checked/>
-        <label for="singleQuote">Single quotes</label>
+        <label for="singleQuote">Single Quotes</label>
       </div>
       <div>
         <input type="radio" id="doubleQuote" name="arrayDataWrap" value="doubleQuote"  />
-        <label for="doubleQuote">Double quotes</label>
+        <label for="doubleQuote">Double Quotes</label>
       </div>
       <div>
         <input type="radio" id="nonArrayDataWrap" name="arrayDataWrap" value="none" />
@@ -34,7 +37,7 @@
       </div>
     </fieldset>
     <fieldset>
-      <legend>Array wrap</legend>
+      <legend>Wrap List Symol</legend>
       <div>
         <input type="radio" id="brackets" name="arrayWrap" value="brackets" checked/>
         <label for="brackets">Brackets</label>
@@ -49,29 +52,42 @@
       </div>
     </fieldset>
     <fieldset>
-      <legend>Array join</legend>
+      <legend>Join Symbol</legend>
       <div>
         <input type="radio" id="comma" name="arrayJoin" value="comma" checked />
-        <label for="comma">comma</label>
+        <label for="comma">Comma</label>
       </div>
       <div>
         <input type="radio" id="newLine" name="arrayJoin" value="newLine" />
-        <label for="newLine">newLine</label>
+        <label for="newLine">New Line</label>
       </div>
       <div>
         <input type="radio" id="space" name="arrayJoin" value="space" />
-        <label for="space">space</label>
+        <label for="space">Space</label>
+      </div>
+    </fieldset>
+    <fieldset>
+      <legend>Case Sensitivity</legend>
+      <div>
+        <input type="radio" id="sensitive" name="caseSensitivity" value="sensitive" checked />
+        <label for="sensitive">Sensitive</label>
+      </div>
+      <div>
+        <input type="radio" id="insensitive" name="caseSensitivity" value="insensitive"  />
+        <label for="insensitive">Insensitive</label>
       </div>
     </fieldset>
   </div>
-  <div class="flex-row" id="buttons">
-    <button onclick="subtract(event)">subtract</button>
-    <button onclick="unique(event)">unique</button>
-    <button onclick="intersect(event)">intersect</button>
-    <button onclick="cleanText(event)">clear</button>
+  <div class="flex-row no-gap" id="buttons">
+    <container-label>Operations</container-label>
+    <div class="flex-row">
+    <button onclick="subtract(event)">A - B</button>
+    <button onclick="unique(event)">Unique A</button>
+    <button onclick="intersect(event)">A ∩ B</button>
+    <button onclick="cleanText(event)">Clear All</button></div>
   </div>
   <div class="flex-row no-gap">
     <container-label>Output</container-label>
-    <textarea class="full-width" id="t3"></textarea> <span class="numLines">0 lines</span>
+    <textarea class="full-width" id="t3"></textarea> <span class="num-lines">0 lines</span>
   </div>
 </div>
