change default values

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <fieldset>
       <legend>Wrap Items Symbol</legend>
       <div>
-        <input type="radio" id="singleQuote" name="arrayDataWrap" value="singleQuote" checked/>
+        <input type="radio" id="singleQuote" name="arrayDataWrap" value="singleQuote" />
         <label for="singleQuote">Single Quotes</label>
       </div>
       <div>
@@ -32,14 +32,14 @@
         <label for="doubleQuote">Double Quotes</label>
       </div>
       <div>
-        <input type="radio" id="nonArrayDataWrap" name="arrayDataWrap" value="none" />
+        <input type="radio" id="nonArrayDataWrap" name="arrayDataWrap" value="none" checked/>
         <label for="nonArrayDataWrap">None</label>
       </div>
     </fieldset>
     <fieldset>
       <legend>Wrap List Symol</legend>
       <div>
-        <input type="radio" id="brackets" name="arrayWrap" value="brackets" checked/>
+        <input type="radio" id="brackets" name="arrayWrap" value="brackets" />
         <label for="brackets">Brackets</label>
       </div>
       <div>
@@ -47,18 +47,18 @@
         <label for="parenthesis">Parenthesis</label>
       </div>
       <div>
-        <input type="radio" id="none" name="arrayWrap" value="none" />
+        <input type="radio" id="none" name="arrayWrap" value="none" checked/>
         <label for="none">None</label>
       </div>
     </fieldset>
     <fieldset>
       <legend>Join Symbol</legend>
       <div>
-        <input type="radio" id="comma" name="arrayJoin" value="comma" checked />
+        <input type="radio" id="comma" name="arrayJoin" value="comma"  />
         <label for="comma">Comma</label>
       </div>
       <div>
-        <input type="radio" id="newLine" name="arrayJoin" value="newLine" />
+        <input type="radio" id="newLine" name="arrayJoin" value="newLine" checked/>
         <label for="newLine">New Line</label>
       </div>
       <div>
